tests/expected_package_import_non_module.diag.out
<input2>:1:1: error: import must name a module, not 'record'
    import pkg_support::SharedNumber;
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
